*SVN*

* Added that query benchmarking will only happen if its going to be logged anyway #344

* Added higher_item and lower_item as public methods for acts_as_list #342 [Tobias Luetke]

* Added respondence to *_before_type_cast for all attributes to return their string-state before they were type casted by the column type.
  This is helpful for getting "100,000" back on a integer-based validation where the value would normally be "100".

* Fixed the automated timestamping feature when running under Rails' development environment that resets the inheritable attributes on each request.

* Added Base#update_attributes that'll accept a hash of attributes and save the record (returning true if it passed validation, false otherwise). 

    Before:
      person.attributes = @params["person"]
      person.save
    
    Now:
      person.update_attributes(@params["person"])

* Added Base.destroy and Base.delete to remove records without holding a reference to them first.


*1.2.0*

* Added Base.validates_inclusion_of that validates whether the value of the specified attribute is available in a particular enumerable
  object. [what-a-day]

    class Person < ActiveRecord::Base
      validates_inclusion_of :gender, :in=>%w( m f ), :message=>"woah! what are you then!??!!"
      validates_inclusion_of :age, :in=>0..99
    end

* Added acts_as_list that can decorates an existing class with methods like move_higher/lower, move_to_top/bottom. [Tobias Luetke] Example:

    class TodoItem < ActiveRecord::Base
      acts_as_list :scope => :todo_list_id
      belongs_to :todo_list
    end

* Added acts_as_tree that can decorates an existing class with a many to many relationship with itself. Perfect for categories in 
  categories and the likes. [Tobias Luetke]

* Added that Active Records will automatically record creation and/or update timestamps of database objects if fields of the names 
  created_at/created_on or updated_at/updated_on are present. [Tobias Luetke]
