@@ -1,5 +1,9 @@
 *SVN*
 
+* Added that Base.update_all and Base.delete_all return an integer of the number of affected rows #341
+
+* Changed the interface on AbstractAdapter to require that adapters return the number of affected rows on delete and update operations.
+
 * Added that query benchmarking will only happen if its going to be logged anyway #344
 
 * Added higher_item and lower_item as public methods for acts_as_list #342 [Tobias Luetke]
